--- a/Interns2.AppServices.MVC/Interns2.AppServices.MVC.csproj
+++ b/Interns2.AppServices.MVC/Interns2.AppServices.MVC.csproj
@@ -12,4 +12,13 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Interns2.Domain\Interns2.Domain.csproj" />
+    <ProjectReference Include="..\Interns2.Infrastructure.MongoDb\Interns2.Infrastructure.MongoDb.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
