--- a/Interns2.AppServices.MVC/Interns2.AppServices.MVC.csproj
+++ b/Interns2.AppServices.MVC/Interns2.AppServices.MVC.csproj
@@ -6,10 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.4.4" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Interns2.Domain\Interns2.Domain.csproj" />
+    <ProjectReference Include="..\Interns2.Infrastructure.MongoDb\Interns2.Infrastructure.MongoDb.csproj" />
   </ItemGroup>
 
 </Project>
