--- a/Interns2.AppServices.MVC/Interns2.AppServices.MVC.csproj
+++ b/Interns2.AppServices.MVC/Interns2.AppServices.MVC.csproj
@@ -5,11 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Interns2.Domain\Interns2.Domain.csproj" />
   </ItemGroup>
 
 </Project>
