--- a/Interns2.AppServices.FlashCard/Interns2.AppServices.FlashCard.csproj
+++ b/Interns2.AppServices.FlashCard/Interns2.AppServices.FlashCard.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -18,10 +25,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Interns.Infrastructure.Identity.MongoDb\Interns.Infrastructure.Identity.MongoDb.csproj" />
     <ProjectReference Include="..\Interns2.Domain\Interns2.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
